# Gregory-Inference-1B-LLM-CLI

./: AGENTS.md  GREGORY  Makefile  README.md  conftest.py  gregory-cli  pyproject.toml
docs/: NPARC_GUIDELINES.md
gregory/: __init__.py  automotive.py  bench.py  cache.py  cli.py  generate.py  gguf.py  model.py  quant.py  sampler.py  threads.py  tokenizer.py
gregory/data/: automotive_kb.md  physics_kb.md
gregory/kernels/: __init__.py  ternary_matmul.c
scripts/: ingest_docs.py  kernel_microbench.py  nparc_baseline.json  nparc_compliance.py  profile_decode.py
tests/: test_automotive.py  test_bench.py  test_gguf.py  test_ingest.py  test_kernel.py  test_nparc_compliance.py  test_quant.py  test_sampler.py  test_smoke_model.py  test_tokenizer.py
